--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Design System Demo</title>
-  <link rel="stylesheet" href="../../styles/index.css
-
+  <link rel="stylesheet" href="../../styles/index.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/themes/light.css" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/shoelace.js"></script>
 </head>
@@ -53,7 +52,6 @@
       <a href="#">Contact</a>
     </div>
   </footer>
-  <!-- Shoelace components JS (nodig voor icon, card, avatar, alert, etc) -->
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/components/icon/icon.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/components/avatar/avatar.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/dist/components/card/card.js"></script>
