--- a/studio/index.html
+++ b/studio/index.html
@@ -12,14 +12,14 @@
     <!-- Dashboard styles -->
     <link rel="stylesheet" href="./dashboard.css">
 
+
     <!-- Shoelace (for nice inputs/buttons), optional -->
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
-  </head>
+  <script type="module" src="components/sidebar/index.js"></script> 
   <body>
     <header class="app-header">
-      <button class="icon-btn" id="menuToggle" aria-label="Toggle menu">
-        ☰
+      <button class="icon-btn" id="menuToggle" aria-label="Toggle menu">☰
       </button>
       <div class="brand">
         <span class="dot"></span>
